--- a/src/App.css
+++ b/src/App.css
@@ -3,36 +3,75 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 40vh;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-wrapper {
+  /* height: 100vh; */
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 70%;
+  margin: 50px auto;
+}
+
+.input {
+  width: 200px;
+  height: 30px;
+  margin: 0 20px;
+}
+
+.input:focus {
+  background-color: grey;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.button {
+  width: 100px;
+  height: 40px;
+  margin: 0 20px;
+  cursor: pointer;
+  background-color: turquoise;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+flex-wrap: wrap;
+  flex-direction: row;
+  margin: 50px 0;
+}
+.card {
+  width: 200px;
+  height: 200px;
+  border-radius: 10px;
+  position: relative;
+  background-color: white;
+  border: 1px solid grey;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  overflow: auto;
+}
+
+.card > h1 {
+  font-size: 20px;
+}
+
+.card > p {
+  white-space: nowrap;
+}
+
+.remove-button {
+  position: absolute;
+  right: -1px;
+  top: -5px;
+  width: 30px;
+  height: 30px;
+  background-color: black;
+  border-radius: 10px;
+  cursor: pointer;
+  color: white;
 }
